Add exclamation mark

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="about">
       <div class="container-slim">
         <h2 class="h2">
-          Atención amantes de las mascotas!
+          ¡Atención amantes de las mascotas!
         </h2>
         <p>
           El próximo domingo 30 de abril, se llevará a cabo Expo Mascotas en el Centro Educativo y Cultural del Estado de Querétaro Gómez Morín. Este evento tiene como objetivo apoyar a los pequeños y medianos comercios locales del estado, por lo que la participación en el mercadito de emprendedores y la campaña de adopciones es completamente gratuita.
